--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -92,7 +92,7 @@
                     <div class="container clearfix">
                         <!-- website logo -->
                         <div class="logo-header pt-2 pb-0 mostion" style="width: 180px">
-                            <a href="{% url 'home:home' %}" class="dez-page p-0"><img src="{% static 'images/logo/home-logo.png' %}"  style="width: 200px" class="p-0"></a>
+                            <a href="{% url 'home:home' %}" class="dez-page p-0"><img src="{% static 'images/home-logo.png' %}"  style="width: 200px" class="p-0"></a>
 <!--                            <p>Stellar AI</p>-->
 <!--                            <p>Stellar AI</p>-->
                         </div>
@@ -315,7 +315,7 @@
             <div class="footer-bottom">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 text-left "><span>Copyright © 2021 Stellar AI</span></div>
+                        <div class="col-lg-6 col-md-12 text-left "><span>Copyright © 2022 Stellar AI</span></div>
                         <div class="col-lg-6 col-md-12 text-right" ><span>Developed by <a href="http://siteguide.co.in/" target="_blank">SiteGuide</a></span></div>
 <!--                        <div class="col-lg-4 col-md-12 text-right ">-->
 <!--                            <div class="widget-link">-->
