--- a/chat/templates/chat/chat-js.html
+++ b/chat/templates/chat/chat-js.html
@@ -1258,6 +1258,7 @@ function getMessageById(data) {
         let url = "{% url 'chat:user-delete-notification' %}";
         $.ajax({
             url : url,
+            type: "POST",
             data : {
                 'email': email,
             },
