--- a/users/templates/users/user_notebook.html
+++ b/users/templates/users/user_notebook.html
@@ -108,7 +108,7 @@ All rights for  development of Stellar AI code room reserve to Stellar AI and He
 
 It is prohibited to use code room for any illegal, abusive or volient activity</h4>
 
-      <button class="w-100 btn btn-primary p-2 close" style="font-size: 14px;">I agreed and continue &nbsp;&nbsp;&nbsp;<i class="fa fa-arrow-right" style="font-weight: 100;font-size: 10px;"></i></button>
+      <button class="w-100 btn btn-primary p-2 close" id="agreeBtn" style="font-size: 14px;">I agreed and continue &nbsp;&nbsp;&nbsp;<i class="fa fa-arrow-right" style="font-weight: 100;font-size: 10px;"></i></button>
 
   </div>
 
