--- a/chat/templates/chat/chat-js.html
+++ b/chat/templates/chat/chat-js.html
@@ -1249,10 +1249,20 @@ function getMessageById(data) {
     {
         $.each(data['data'], function(e){
             user = data['data'][e];
+            if(user['type'] === 'p2p')
+            {
             createNewPanel(user['user_id'],user['username'], user['email'], user['profile_img_url'],user['user_full_name'],
-    user['phone_number'], user['profile_url'], user['designation'], user['bio'], user['self_img_url']);
+    user['phone_number'], user['profile_url'], user['designation'], user['bio'], "{{ request.user.get_profile_img }}");
             setupNewWebsocket(user['user_id']);
-            deleteNotification(user['email']);    
+            deleteNotification(user['email']);
+            }
+            else{
+                createNewGroupPanel(user['group_name_for_socket'], user['profile_image_url'],"{{ request.user.get_profile_img }}" , user['group_id'], user['group_info'],
+                    user['group_name']);
+                setupNewGroupWebsocket(user['group_id'], user['group_name_for_socket']);
+                deleteGroupNotification(user['group_name_for_socket']);
+            }
+
         });
     }
 
@@ -1264,6 +1274,22 @@ function getMessageById(data) {
             type: "POST",
             data : {
                 'email': email,
+            },
+            success: function(data)
+            {
+                console.log(data);
+            }
+        });
+    }
+
+    function deleteGroupNotification(groupName)
+    {
+        let url = "{% url 'chat:user-delete-group-notification' %}";
+        $.ajax({
+            url : url,
+            type: "POST",
+            data : {
+                'group_name': groupName,
             },
             success: function(data)
             {
