--- a/chat/templates/chat/tab_content_create_chat.html
+++ b/chat/templates/chat/tab_content_create_chat.html
@@ -231,7 +231,7 @@
                                             <!-- Button Start Chat -->
                                             <div class="mt-5 position-relative">
                                                 <button id="create-chat-members-btn" class="btn btn-lg btn-primary w-100 d-flex align-items-center" disabled type="submit">
-                                                    Start chat
+                                                    Start coding
                                                     <span class="icon ms-auto">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
                                                     </span>
