--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -142,15 +142,15 @@
                     </li> -->
 
                     <!-- New chat -->
-                    {% if request.user.is_plan_valid and allow_group_creation %}
-                    <li class="nav-item">
-                        <a class="nav-link py-0 py-lg-8" id="tab-create-chat" href="#tab-content-create-chat" title="Create code room" data-bs-toggle="tab" role="tab">
-                            <div class="icon icon-xl">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg>
-                            </div>
-                        </a>
-                    </li>
-                    {% endif %}
+{#                    {% if request.user.is_plan_valid and allow_group_creation %}#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link py-0 py-lg-8" id="tab-create-chat" href="#tab-content-create-chat" title="Create code room" data-bs-toggle="tab" role="tab">#}
+{#                            <div class="icon icon-xl">#}
+{#                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg>#}
+{#                            </div>#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    {% endif %}#}
 
                     <!-- Friends -->
                     <li class="nav-item">
