--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -296,6 +296,7 @@
                                     <li><a target="_blank" href="https://www.linkedin.com/posts/stellarai_machinelearning-artificialintelligence-planning-activity-6897175150362443777-YGYL"><i class="fa fa-linkedin"></i></a></li>
 <!--                                    <li><a href="javascript:void(0);"><i class="fa fa-dribbble"></i></a></li>-->
                                     <li><a href="https://twitter.com/StellarAI_" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="https://discord.gg/kVmB5XA9" target="_blank"><i class="fab fa-discord"></i></a></li>
                                 </ul>
                             </div>
                         </div>
