--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -11,7 +11,7 @@
     <meta name="author" content="" />
     <meta name="robots" content="" />
     <meta name="description" content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users." />
-    <meta property="og:title" content="Steller AI" />
+    <meta property="og:title" content="Stellar AI" />
     <meta property="og:description" content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users." />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no">
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" href="{% static 'images/logo/color-logo.png' %}" />
 
     <!-- PAGE TITLE HERE -->
-    <title>Steller AI</title>
+    <title>Stellar AI</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
