add controls to video

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -144,7 +144,7 @@ i.fa.fa-chevron-down{
     <!-- Slider Banner -->
 
     <div class="" style="background: black;max-height: 500px;margin-top: -2em;">
-        <center><video id="myVideo" autoplay muted loop style="max-height: 500px;max-width: 100%;padding-top: 1em;">
+        <center><video id="myVideo" autoplay muted loop controls style="max-height: 500px;max-width: 100%;padding-top: 1em;">
           <source src="{% static 'video/dark.mp4' %}" type="video/mp4">
           <source src="{% static 'video/dark.mp4' %}" type="video/ogg">
         </video></center>
