code room icon changed

--- a/home/templates/home/social_base.html
+++ b/home/templates/home/social_base.html
@@ -136,7 +136,7 @@
                         {% else %}
                         <a class="icon-link" href="javascript:void(0);">
                         {% endif %}
-                            <i data-feather="mail"></i>
+                            <i class="fa-solid fa-users-line"></i>
                             {% if total_message_count > 0 %}
                             <div class="custom-indicator red">
                                 {{total_message_count}}
@@ -668,6 +668,7 @@
                     {% else %}
                     <a class="icon-link" href="javascript:void(0);">
                     {% endif %}
+{#                        <i data-feather="mail"></i>#}
                         <i class="fa-solid fa-users-line"></i>
                         {% if total_message_count > 0 %}
                         <div class="custom-indicator red">
