refund line hide

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -275,8 +275,8 @@
                             <div class="widget widget_services border-0">
                                 <h5 class="footer-title">Policy</h5>
                                 <ul>
-                                   <li><a href="{% url 'home:terms' 'refund_policy' %}">Refund Policy</a></li>
-                                   <li><a href="{% url 'home:terms' 'cancellation_policy' %}">Cancellation Policy</a></li>
+{#                                   <li><a href="{% url 'home:terms' 'refund_policy' %}">Refund Policy</a></li>#}
+{#                                   <li><a href="{% url 'home:terms' 'cancellation_policy' %}">Cancellation Policy</a></li>#}
                                     <li><a href="{% url 'home:terms' 'privacy-policy' %}">Privacy Policy</a></li>
                                     <li><a href="{% url 'home:terms' 'terms-and-condition' %}">Terms And Condition</a></li>
                                 </ul>
